--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -54,9 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IRequestHistoryService.cs" />
+    <Compile Include="Abstract\IRequestService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
+    <Compile Include="Concrete\RequestHistoryManager.cs" />
+    <Compile Include="Concrete\RequestManager.cs" />
     <Compile Include="Concrete\UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRules\RequestValidator.cs" />
     <Compile Include="ValidationRules\UserValidator.cs" />
   </ItemGroup>
   <ItemGroup>
